samples/raylib.h

typedef enum
{
    false,
    true
} bool;
// Vector3 type
typedef struct Vector3
{
    float x;
    float y;
    float z;
} Vector3;
// Quaternion type, same as Vector4
typedef Vector4 Quaternion;
// Matrix type (OpenGL style 4x4 - right handed, column major)
typedef struct Matrix
{
    float m0, m4, m8, m12;
    float m1, m5, m9, m13;
    float m2, m6, m10, m14;
    float m3, m7, m11, m15;
} Matrix;
// Vertex data definning a mesh
// NOTE: Data stored in CPU memory (and GPU)
typedef struct Mesh
{
    int vertexCount;   // Number of vertices stored in arrays
    int triangleCount; // Number of triangles stored (indexed or not)

    // Default vertex data
    float *vertices;         // Vertex position (XYZ - 3 components per vertex) (shader-location = 0)
    float *texcoords;        // Vertex texture coordinates (UV - 2 components per vertex) (shader-location = 1)
    float *texcoords2;       // Vertex second texture coordinates (useful for lightmaps) (shader-location = 5)
    float *normals;          // Vertex normals (XYZ - 3 components per vertex) (shader-location = 2)
    float *tangents;         // Vertex tangents (XYZW - 4 components per vertex) (shader-location = 4)
    unsigned char *colors;   // Vertex colors (RGBA - 4 components per vertex) (shader-location = 3)
    unsigned short *indices; // Vertex indices (in case vertex data comes indexed)

    // Animation vertex data
    float *animVertices; // Animated vertex positions (after bones transformations)
    float *animNormals;  // Animated normals (after bones transformations)
    int *boneIds;        // Vertex bone ids, up to 4 bones influence by vertex (skinning)
    float *boneWeights;  // Vertex bone weight, up to 4 bones influence by vertex (skinning)

    // OpenGL identifiers
    unsigned int vaoId;    // OpenGL Vertex Array Object id
    unsigned int vboId[7]; // OpenGL Vertex Buffer Objects id (default vertex data)
} Mesh;
// Shader type (generic)
typedef struct Shader
{
    unsigned int id;                // Shader program id
    int locs[MAX_SHADER_LOCATIONS]; // Shader locations array
} Shader;
// Material texture map
typedef struct MaterialMap
{
    Texture2D texture; // Material map texture
    Color color;       // Material map color
    float value;       // Material map value
} MaterialMap;
// Material type (generic)
typedef struct Material
{
    Shader shader;                       // Material shader
    MaterialMap maps[MAX_MATERIAL_MAPS]; // Material maps
    float *params;                       // Material generic parameters (if required)
} Material;
// Transformation properties
typedef struct Transform
{
    Vector3 translation; // Translation
    Quaternion rotation; // Rotation
    Vector3 scale;       // Scale
} Transform;
// Bone information
typedef struct BoneInfo
{
    char name[32]; // Bone name
    int parent;    // Bone parent
} BoneInfo;
// Model type
typedef struct Model
{
    Matrix transform; // Local transform matrix

    int meshCount; // Number of meshes
    Mesh *meshes;  // Meshes array

    int materialCount;   // Number of materials
    Material *materials; // Materials array
    int *meshMaterial;   // Mesh material number

    // Animation data
    int boneCount;       // Number of bones
    BoneInfo *bones;     // Bones information (skeleton)
    Transform *bindPose; // Bones base transformation (pose)
} Model;
// Model animation
typedef struct ModelAnimation
{
    int boneCount;   // Number of bones
    BoneInfo *bones; // Bones information (skeleton)

    int frameCount;         // Number of animation frames
    Transform **framePoses; // Poses array by frame
} ModelAnimation;
// Ray type (useful for raycast)
typedef struct Ray
{
    Vector3 position;  // Ray position (origin)
    Vector3 direction; // Ray direction
} Ray;
// Raycast hit information
typedef struct RayHitInfo
{
    bool hit;         // Did the ray hit something?
    float distance;   // Distance to nearest hit
    Vector3 position; // Position of nearest hit
    Vector3 normal;   // Surface normal of hit
} RayHitInfo;
// Bounding box type
typedef struct BoundingBox
{
    Vector3 min; // Minimum vertex box-corner
    Vector3 max; // Maximum vertex box-corner
} BoundingBox;
// Wave type, defines audio wave data
typedef struct Wave
{
    unsigned int sampleCount; // Number of samples
    unsigned int sampleRate;  // Frequency (samples per second)
    unsigned int sampleSize;  // Bit depth (bits per sample): 8, 16, 32 (24 not supported)
    unsigned int channels;    // Number of channels (1-mono, 2-stereo)
    void *data;               // Buffer data pointer
} Wave;